# rvv-intrinsics-playground

./: .gitignore  CMakeLists.txt  README.md
benchmarks/convert_f32_i32/: CMakeLists.txt  README.md  main.c
benchmarks/gather_i32/: CMakeLists.txt  README.md  main.c
benchmarks/mask_select_i32/: CMakeLists.txt  README.md  main.c
benchmarks/mul_f32/: CMakeLists.txt  README.md  main.c
benchmarks/reduce_sum_f32/: CMakeLists.txt  README.md  main.c
benchmarks/saxpy_f32/: CMakeLists.txt  README.md  main.c
benchmarks/scatter_i32/: CMakeLists.txt  README.md  main.c
benchmarks/slide1down_i32/: CMakeLists.txt  README.md  main.c
benchmarks/strided_load_f32/: CMakeLists.txt  README.md  main.c
benchmarks/vector_add_f32/: CMakeLists.txt  README.md  main.c
benchmarks/widen_add_i16_i32/: CMakeLists.txt  README.md  main.c
cmake/: benchmark-common.cmake  riscv64-unknown-linux-gnu-toolchain.cmake
docs/: setup.md  writing-rvv-kernels.md
include/rvv_playground/: bench_utils.h
scripts/: install_riscv_toolchain.sh  run_on_spike.sh
src/: bench_utils.c
